# habit_tracker

./: .envexample  .flake8  Dockerfile  README.md  docker-compose.yml  habit.json  pyproject.toml  requirements.txt  users.json
.github/workflows/: ci.yml
config/: settings.py  urls.py
habit/: admin.py  models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
nginx/: Dockerfile
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/management/commands/: add_user.py  csu.py
